--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "mongoose": "^8.13.0",
+    "express-session": "^1.18.2",
+    "mongoose": "^8.18.2",
     "mysql2": "^3.13.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "jest": "^30.1.3",
