--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Pruebas
+        run: npm test -- --coverage
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
